kubenetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onspot-app
  namespace: onspot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onspot-app
  template:
    metadata:
      labels:
        app: onspot-app
    spec:
      containers:
        - name: onspot-app
          image: rehunt671/onspot-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: onspot
  name: onspot-service
spec:
  type: ClusterIP
  selector:
    app: onspot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
