kubenetes/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: onspot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          command:
            - "minio"
            - "server"
            - "--address"
            - ":9000"
            - "--console-address"
            - ":9001"
            - "/data"
          ports:
            - name: console
              containerPort: 9001
            - name: api
              containerPort: 9000
          volumeMounts:
            - name: minio-storage
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: onspot
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
