kubenetes/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: onspot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/var/lib/pgadmin"
              name: pgadmin-storage
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: onspot
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
